<resources>

    <string name="app_name">My Application</string>
    <string name="categoryButton1">       Typer och Variabler</string>
    <string name="categoryButton2">       If-satser och boolean logik</string>
    <string name="categoryButton3">       For- och while-loopar</string>
    <string name="categoryButton4">       Arrayer</string>

    <string name="Level1">1</string>
    <string name="Level2">2</string>
    <string name="Level3">3</string>
    <string name="Level4">4</string>
    <string name="BossLevel">Boss</string>

    <string name="title_activity_navigation_drawer">Learn Java</string>

    <string name="navigation_drawer_open">Hej</string>
    <string name="navigation_drawer_close">Hejdå</string>

    <string name="action_settings">Ska vi ha nått här?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="PassedLevel_heading">Grattis, du har klarat uppgiften!</string>
    <string name="PassedLevel_Button1">Nästa nivå</string>
    <string name="PassedLevel_Button2">Tillbaka</string>
    <string name="FailedLevel_Button1">Testa igen</string>
    <string name="FailedLevel_heading">Fel!</string>
    <string name="FailedLevel_helptext">Klicka på ? om du behöver hjälp</string>

    <string name="actions_help">Klicka för hjälp</string>
    <string name="facebook_app_id">236847580117061</string>

    <string name="info">Lorem ipsum etc...</string>
    <string name="hint">Klicka här för att se hint</string>
    <string name="hint_tillbaka">Tillbaka</string>
    <string name="sound_settings">Settings</string>

    <string name="info1">I java sparas värden i variabler. Dessa variabler har en deklarerad typ. Det finns 8 primitiva typer, där de vanligaste är boolean, int, double och char. booleans kan hålla två olika värden, true och false. double och int håller båda tal, där double håller decimaltal och int håller heltal. char kan hålla ett tecken. De primitiva typerna skrivs alltid med liten inledande bokstav. Exempel på hur variabler av dessa typer deklareras och instansieras kan ses nedan:

int i = 5;
char alpha = ‘a’;
boolean isThisTrue = false;
double decimals = 2.5;

Det finns också andra typer i java, en väldigt användbar är String. Denna typen håller strängar av text. String skrivs med stor inledande bokstav. En String-variabel kan deklareras som String text;</string>
    <string name="about">About</string>
    <string name="submit">Submit</string>

</resources>
