<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tda367.myapplication.MainActivity">

    <Button
        android:id="@+id/category3"
        android:layout_width="258dp"
        android:layout_height="120dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundcornerbuttons"
        android:text="@string/categoryButton3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category2"
        app:layout_constraintVertical_bias="0.545" />

    <Button
        android:id="@+id/category2"
        android:layout_width="258dp"
        android:layout_height="120dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/categoryButton2"
        app:layout_constraintBottom_toTopOf="@+id/category3"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/roundcornerbuttons"/>

    <ImageView
        android:id="@+id/imageViewCat2"
        android:layout_width="63dp"
        android:layout_height="64dp"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/category2"
        app:layout_constraintTop_toTopOf="@+id/category2"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/category2"
        app:layout_constraintHorizontal_bias="0.055" />

    <ImageView
        android:id="@+id/imageViewCat3"
        android:layout_width="63dp"
        android:layout_height="64dp"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/category3"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/category3"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.046"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCat2"
        app:layout_constraintVertical_bias="0.612" />

    <Button
        android:id="@+id/category1"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="258dp"
        android:layout_height="120dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundcornerbuttons"
        android:text="@string/categoryButton1"
        app:layout_constraintBottom_toTopOf="@+id/category2"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewCat1"
        android:layout_width="63dp"
        android:layout_height="64dp"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/category1"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/category1"
        app:layout_constraintTop_toTopOf="@+id/category1"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.074"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewCat2"
        app:layout_constraintVertical_bias="0.211" />

    <View
        android:layout_width="7dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:background="#000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>
