<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="tda367.myapplication.controller.PlayFragment">

    <!--
    <android.support.v7.widget.Toolbar
        android:id="@+id/levelToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>
-->

    <Button
        android:id="@+id/category3"
        android:layout_width="258dp"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/category1"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundcornerbuttons"
        android:onClick="onClick"
        android:text="@string/categoryButton3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category2"
        app:layout_constraintVertical_bias="0.504" />

    <Button
        android:id="@+id/category2"
        android:layout_width="258dp"
        android:layout_height="120dp"
        android:layout_alignStart="@+id/category3"
        android:layout_centerVertical="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundcornerbuttons"
        android:onClick="onClick"
        android:text="@string/categoryButton2"
        app:layout_constraintBottom_toTopOf="@+id/category3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category1" />

    <Button
        android:id="@+id/category1"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="258dp"
        android:layout_height="120dp"
        android:layout_alignTop="@+id/imageViewCat2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundcornerbuttons"
        android:onClick="onClick"
        android:text="@string/categoryButton1"
        app:layout_constraintBottom_toTopOf="@+id/category2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewCat2"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/category2"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="@+id/category2"
        app:layout_constraintRight_toRightOf="@+id/category2"
        app:layout_constraintTop_toTopOf="@+id/category2"
        app:layout_constraintVertical_bias="0.475"
        app:srcCompat="@drawable/ic_lock_black_24dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ImageView
        android:id="@+id/imageViewCat3"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/category3"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="@+id/category3"
        app:layout_constraintRight_toRightOf="@+id/category3"
        app:layout_constraintTop_toTopOf="@+id/category3"
        app:layout_constraintVertical_bias="0.45"
        app:srcCompat="@drawable/ic_lock_black_24dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ImageView
        android:id="@+id/imageViewCat1"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/category1"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="@+id/category1"
        app:layout_constraintRight_toRightOf="@+id/category1"
        app:layout_constraintTop_toTopOf="@+id/category1"
        app:layout_constraintVertical_bias="0.475"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <View
        android:id="@+id/view"
        android:layout_width="7dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/view3"
        android:layout_width="7dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67" />

    <View
        android:id="@+id/view2"
        android:layout_width="7dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.331" />

</android.support.constraint.ConstraintLayout>
